13 Aug 2009 (svn.debian.org/tux4kids -revision 1432)
[Sarah Frisk <ssfrisk@gmail.com> }
	- Fixed a bug in ChooseWordList() where file names longer than 8 char
	were mixing up with other filenames in the display

13 Aug 2009 (svn.debian.org/tux4kids -revision 1430)
[Sarah Frisk <ssfrisk@gmail.com> }
	- Fixed bug/garbage issues

12 Aug 2009 (svn.debian.org/tux4kids -revision 1423)
[Sarah Frisk <ssfrisk@gmail.com> }
	- Handled some bug issues
	- EditWordList() now displays wordlist name

11 Aug 2009 (svn.debian.org/tux4kids -revision 1416)
[Sarah Frisk <ssfrisk@gmail.com> }
	- Changed arrow location for EditWordList() and ChooseListToEdit()
	- Fixed word deletion issues
	- Fixed a random garbage issue, where characters were appearing
	at the beginning of a wordlist after saving.

10 Aug 2009 (svn.debian.org/tux4kids -revision 1411)
[Sarah Frisk <ssfrisk@gmail.com> }
	-Clarified directions in NewWordList()
	-Clarified RemoveWordlist() functionality
	
10 Aug 2009 (svn.debian.org/tux4kids -revision 1408)
[Sarah Frisk <ssfrisk@gmail.com> }
	-Test for the new wordlist function is now centered
	-pressing cancel now redraws the screen

10 Aug 2009 (svn.debian.org/tux4kids -revision 1407)
[Sarah Frisk <ssfrisk@gmail.com> }
	-Left and right arrows now show up
	-adding a word list now checks for empty wordlists

10 Aug 2009 (svn.debian.org/tux4kids -revision 1406)
[Sarah Frisk <ssfrisk@gmail.com> }
	-Screen is redrawn properly after a wordlist is added/deleted

9 Aug 2009 (svn.debian.org/tux4kids -revision 1405)
[Sarah Frisk <ssfrisk@gmail.com> }
	-Bus error bug is fixed.  Final cosmetic issues should be fixed tomorrow.

5 Aug 2009 (svn.debian.org/tux4kids -revision 1365)
[Sarah Frisk <ssfrisk@gmail.com> }
	-Program now successfully creates/removes/changes files
	-Bug to be fixed: program crashes at the end of NewWordList(),
	however, it does save the new word list.

4 Aug 2009 (svn.debian.org/tux4kids -revision 1361)
[Sarah Frisk <ssfrisk@gmail.com> }